# pyidotmatrix

./: CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROBE_PLAN.md  README.md  ROADMAP.md  api-reference.md  architecture.md  features.md  firmware-notes.md  getting-started.md  hardware-compatibility.md  protocol-notes.md
docs/reverse-engineering/: ALARM_BUZZER_APK_FINDINGS.md  APK_PROTOCOL_FINDINGS.md  APK_RESEARCH_HANDOFF.md  APK_SECOND_PASS.md  FEATURE_MATRIX.md  README.md
examples/: 01_discover_and_clock.py  02_show_image.py  03_full_frame_animation.py  04_graffiti_pixels.py  05_gif_upload.py  06_native_widgets.py  07_simulator.py  08_capability_table.py  README.md
idotmatrix/: __init__.py  client.py  screen.py  validation.py
idotmatrix/display/: __init__.py  ble_display.py  simulator.py
idotmatrix/protocol/: bytes_.py  clock.py  common.py  eco.py  effect.py  fullscreen_color.py  gif.py  graffiti.py  image.py  music_sync.py  response.py  schedule.py  scoreboard.py  text.py  timer.py
idotmatrix/transport/: __init__.py  ble.py  status.py
probes/: _reset_once.py  probe_boundary_sweep.py  probe_capability_sweep1.py  probe_capability_sweep2.py  probe_capability_sweep3.py  probe_chronograph_clean.py  probe_content_image_and_recolor.py  probe_diy_modes.py  probe_effect_set_speed.py  probe_effect_speed.py  probe_effect_speed2.py  probe_gif_chunk1_isolation.py  probe_gif_color_reliability.py  probe_gif_crc_cache.py  probe_gif_crc_cache2.py  probe_gif_crc_cache3.py  probe_gif_stored_chunk1.py  probe_graffiti_byte3_final.py  probe_graffiti_byte3_state.py  probe_graffiti_byte3_state2.py  probe_graffiti_byte4_erase.py  probe_graffiti_mirror.py  probe_graffiti_movement.py  probe_graffiti_movetype.py  probe_graffiti_movetype2.py  probe_graffiti_movetype3.py  probe_graffiti_transform.py  probe_graffiti_transform2.py  probe_p1_followups.py  probe_p8_geometry.py  probe_schedule_gif.py  probe_schedule_master_switch.py  probe_screen_timeout.py  probe_streaming_benchmark.py  probe_timer_close.py  probe_timer_image.py  probe_timer_weekbit.py  probe_verify_password.py
pyidotmatrix/: __init__.py  capabilities.py  client.py  exceptions.py  imaging.py
pyidotmatrix/display/: __init__.py  backend.py  ble_display.py  simulator.py
pyidotmatrix/protocol/: __init__.py  chronograph.py  clock.py  common.py  countdown.py  effect.py  fullscreen_color.py  gif.py  graffiti.py  image.py  music_sync.py  response.py  schedule.py  text.py  timer.py
pyidotmatrix/transport/: __init__.py  ble.py  const.py  status.py
tests/: test_ble_display.py  test_capabilities.py  test_client.py  test_exceptions.py  test_imaging.py  test_parse_btsnoop.py  test_protocol_commands.py  test_protocol_common.py  test_protocol_graffiti.py  test_protocol_image.py  test_protocol_response.py  test_protocol_text_gif.py  test_protocol_timer_schedule.py  test_simulator.py  test_transport.py  test_validation.py
tools/: parse_btsnoop.py
