[project]
name = "pyidotmatrix"
description = "Opinion-free Python SDK for iDotMatrix BLE pixel displays."
authors = [{ name = "Madhat" }]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12,<3.15"
version = "0.1.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Typing :: Typed",
]

dependencies = [
    "bleak>=0.22.3",
    "pillow>=11.2.1",  # text rendering and GIF adaptation are core features
]

[project.urls]
# Decided 2026-07-20 (ROADMAP §18).
Homepage = "https://github.com/Madhat69/pyidotmatrix"

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyidotmatrix*"]

[tool.setuptools.package-data]
pyidotmatrix = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
