[project]
name = "pyidotmatrix"
description = "Opinion-free Python SDK for iDotMatrix BLE pixel displays."
authors = [{ name = "Madhat" }]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12,<3.15"
version = "0.1.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Typing :: Typed",
]

dependencies = [
    "bleak>=0.22.3",
    "pillow>=11.2.1",  # text rendering and GIF adaptation are core features
]

[project.urls]
# Decided 2026-07-20 (ROADMAP §18).
Homepage = "https://github.com/Madhat69/pyidotmatrix"

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=1.0.0",
]
# Lint/type-check toolchain (the CI lint job installs this). Kept out of the
# `test` extra so the test matrix keeps installing exactly what it did before.
dev = [
    "ruff>=0.15",
    "mypy>=1.14",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyidotmatrix*"]

[tool.setuptools.package-data]
pyidotmatrix = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Lint only -- no formatter takeover; the codebase's existing layout stands.
# E/W/F core, I import order, UP modern syntax, B likely bugs.
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Tests assign small lambdas as throwaway callbacks; rewriting them as defs
# adds noise for zero clarity.
"tests/*" = ["E731"]

[tool.mypy]
python_version = "3.12"
files = ["pyidotmatrix"]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
